--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,11 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  *:focus-visible {
+    outline: none !important;
+    box-shadow: none !important;
+  }
 }
 
 @layer components {
